--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@tsconfig/node16": "^1.0.3",
-    "@types/node": "^18.11.18",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^18.11.18",
+    "eslint": "^8.33.0",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.29",
     "rimraf": "^4.1.2"
